tests/machine/x/ts/string_contains.error
line: 0
error: run error: exit status 1
[0m[1m[31merror[0m: Uncaught (in promise) TypeError: s.contains is not a function
console.log(s.contains("cat"));
[0m[31m              ^[0m
    at [0m[36mfile:///workspace/mochi/tests/machine/x/ts/string_contains.ts[0m:[0m[33m2[0m:[0m[33m15[0m

   1: let s = "catch";
   2: console.log(s.contains("cat"));
