tests/machine/x/ts/string_contains.ts
let s = "catch";
console.log(s.contains("cat"));
console.log(s.contains("dog"));
